# splax

./: .gitignore  LICENSE  README.md  pyproject.toml  splade_train.py
conf/: cocondenser_base.yaml  distilbert_base.yaml
conf/model/: cocondenser.yaml  distilbert.yaml
src/splax/data/: dataset.py
src/splax/models/: bert.py  model_registry.py  splade_model.py
src/splax/models/base_models/: bert.py  flash_bert.py
src/splax/models/splade_models/: distilbert.py  model_registry.py
src/splax/training/: losses.py  sparse_trainer.py  trainer.py
